Implement swipe to delete feature and update build properties
- Added functionality to enable swipe to delete, allowing users to delete the last word with a swipe gesture.
- Updated SettingsManager to manage the new swipe to delete preference.
- Enhanced SettingsScreen to include a toggle for the swipe to delete feature with appropriate UI elements.
- Updated PhysicalKeyboardInputMethodService to handle the swipe to delete logic.
- Modified build properties to reflect the new build date and number.

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -21,6 +21,9 @@
     <string name="double_space_to_period_title">Doppio Spazio per Punto</string>
     <string name="double_space_to_period_description">Doppio tap su spazio per inserire un punto seguito da spazio e capitalizzare la lettera successiva.</string>
     
+    <!-- Swipe to Delete Section -->
+    <string name="swipe_to_delete_title">Abilita Swipe per Cancellare</string>
+    
     <!-- Info Section -->
     <string name="info_title">Informazioni</string>
     <string name="info_description">Le impostazioni vengono salvate automaticamente e applicate immediatamente all\'input method.</string>
