--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="double_space_to_period_title">Double Space to Period</string>
     <string name="double_space_to_period_description">Double tap space to insert a period followed by a space and capitalize the next letter.</string>
     
+    <!-- Swipe to Delete Section -->
+    <string name="swipe_to_delete_title">Enable Swipe to Delete</string>
+    
     <!-- Info Section -->
     <string name="info_title">Information</string>
     <string name="info_description">Settings are automatically saved and immediately applied to the input method.</string>
