setting screen now refactored and organized: test needed

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -260,6 +260,13 @@
     
     <!-- Auto Correct Settings -->
     <string name="auto_correct_ricette_pastiera_name">Ricette Pastiera</string>
+    
+    <!-- Settings Categories -->
+    <string name="settings_category_keyboard_timing">Tastatur &amp; Timing</string>
+    <string name="settings_category_text_input">Texteingabe</string>
+    <string name="settings_category_auto_correction">Autokorrektur</string>
+    <string name="settings_category_customization">Anpassung</string>
+    <string name="settings_category_advanced">Erweitert</string>
 </resources>
 
 
