--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -260,6 +260,13 @@
     
     <!-- Auto Correct Settings -->
     <string name="auto_correct_ricette_pastiera_name">Ricette Pastiera</string>
+    
+    <!-- Settings Categories -->
+    <string name="settings_category_keyboard_timing">Teclado &amp; Temporización</string>
+    <string name="settings_category_text_input">Entrada de Texto</string>
+    <string name="settings_category_auto_correction">Auto-corrección</string>
+    <string name="settings_category_customization">Personalización</string>
+    <string name="settings_category_advanced">Avanzado</string>
 </resources>
 
 
