--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -438,4 +438,22 @@
     
     <!-- Units -->
     <string name="dip_unit">DIP</string>
+    
+    <!-- Custom Input Styles -->
+    <string name="custom_input_styles_title">Custom Input Styles</string>
+    <string name="custom_input_styles_description">Add additional languages and keyboard layouts that are not tied to system locale</string>
+    <string name="custom_input_styles_add">Add Input Style</string>
+    <string name="custom_input_styles_empty">No custom input styles added yet. Tap the + button to add one.</string>
+    <string name="custom_input_styles_delete">Delete</string>
+    <string name="custom_input_styles_delete_confirm_title">Delete Input Style</string>
+    <string name="custom_input_styles_delete_confirm_message">Are you sure you want to delete this input style?</string>
+    <string name="custom_input_styles_add_dialog_title">Add Input Style</string>
+    <string name="custom_input_styles_select_locale">Select Language</string>
+    <string name="custom_input_styles_select_layout">Select Keyboard Layout</string>
+    <string name="custom_input_styles_save">Save</string>
+    <string name="custom_input_styles_cancel">Cancel</string>
+    <string name="custom_input_styles_duplicate_error">This language and layout combination already exists</string>
+    <string name="custom_input_styles_open_ime_picker">Open IME Picker</string>
+    <string name="custom_input_styles_open_ime_picker_description">Open system input method picker to enable the new language</string>
+    <string name="custom_input_styles_format">%1$s - %2$s</string>
 </resources>
