Update clipboard retention settings and enhance UI components
- Improve trackpad swipe detection with velocity threshold and stricter filters
- feat: auto-corrections based on active IME language and toggle, remove manual language addition
- Introduced clipboard retention time settings in AdvancedSettingsScreen, allowing users to specify how long clipboard entries are retained.
- Added UI elements for clipboard retention time input, including validation and application functionality.
- Updated ClipboardDao and ClipboardHistoryManager to support retention time logic for clipboard entries.
- Enhanced string resources for clipboard retention features in multiple languages.

These changes improve clipboard management and user control over retention settings.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -379,6 +379,10 @@
     <string name="clipboard_pin">Anheften</string>
     <string name="clipboard_unpin">Loslösen</string>
     <string name="clipboard_delete">Löschen</string>
+    <string name="clipboard_retention_apply">Anwenden</string>
+    <string name="clipboard_retention_time_title">Aufbewahrungszeit der Zwischenablage</string>
+    <string name="clipboard_retention_time_description">0 = nie löschen</string>
+    <string name="clipboard_retention_time_minutes">%1$d Minuten</string>
     <string name="update_dialog_title">Neues Update verfügbar</string>
     <string name="update_dialog_message">Version %1$s ist auf GitHub verfügbar.</string>
     <string name="update_dialog_open_github">GitHub öffnen</string>
