--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -172,6 +172,7 @@
     <string name="emoji_category_objects">Objets</string>
     <string name="emoji_category_symbols">Symboles</string>
     <string name="emoji_category_flags">Drapeaux</string>
+    <string name="emoji_category_recents">Récents</string>
     <string name="emoji_category_smileys_and_emotion">Sourires et émotions</string>
     <string name="emoji_category_people_and_body">Personnes et corps</string>
     <string name="emoji_category_animals_and_nature">Animaux et nature</string>
