--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -172,6 +172,7 @@
     <string name="emoji_category_objects">Obiekty</string>
     <string name="emoji_category_symbols">Symbole</string>
     <string name="emoji_category_flags">Flagi</string>
+    <string name="emoji_category_recents">Ostatnie</string>
     <string name="emoji_category_smileys_and_emotion">Uśmiechy i emocje</string>
     <string name="emoji_category_people_and_body">Ludzie i ciało</string>
     <string name="emoji_category_animals_and_nature">Zwierzęta i natura</string>
