--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,6 +321,7 @@
     <string name="emoji_category_objects">Objects</string>
     <string name="emoji_category_symbols">Symbols</string>
     <string name="emoji_category_flags">Flags</string>
+    <string name="emoji_category_recents">Recents</string>
     <string name="emoji_category_emoticons">Emoticons</string>
     <string name="emoji_picker_error">Unable to load emoji</string>
     
