Refactor status bar to modular architecture with customizable buttons
- Extract status bar buttons into factory pattern (Clipboard, Microphone, Language, Emoji)
- Implement StatusBarButtonRegistry for dynamic button management
- Add StatusBarButtonsScreen in settings for button customization
- Support 3 configurable slots (1 left, 2 right) with dropdown selection
- Make variation row expand dynamically based on enabled buttons
- Ensure consistent button sizing and spacing across all button types

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -509,4 +509,22 @@
     <string name="trackpad_tutorial_complete">Capito</string>
     <string name="trackpad_tutorial_next">Successivo</string>
     <string name="trackpad_tutorial_previous">Precedente</string>
+
+    <!-- Status Bar Buttons Configuration -->
+    <string name="status_bar_buttons_title">Pulsanti Barra di Stato</string>
+    <string name="status_bar_buttons_description">Personalizza i pulsanti nella barra di stato. Ogni slot può avere un pulsante diverso.</string>
+    <string name="status_bar_slot_left">Slot Sinistro</string>
+    <string name="status_bar_slot_right_1">Slot Destro 1</string>
+    <string name="status_bar_slot_right_2">Slot Destro 2</string>
+    <string name="status_bar_button_none">Nessuno</string>
+    <string name="status_bar_button_none_description">Slot vuoto</string>
+    <string name="status_bar_button_clipboard">Appunti</string>
+    <string name="status_bar_button_clipboard_description">Accesso rapido alla cronologia degli appunti</string>
+    <string name="status_bar_button_microphone">Microfono</string>
+    <string name="status_bar_button_microphone_description">Input vocale tramite riconoscimento vocale</string>
+    <string name="status_bar_button_emoji">Emoji</string>
+    <string name="status_bar_button_emoji_description">Apri il selettore di emoji</string>
+    <string name="status_bar_button_language">Lingua</string>
+    <string name="status_bar_button_language_description">Cambia la lingua della tastiera</string>
+    <string name="status_bar_buttons_reset">Ripristina predefiniti</string>
 </resources>
