--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -561,4 +561,22 @@
 
     <!-- Trackpad Debug Accessibility Service -->
     <string name="trackpad_debug_service_description">Displays trackpad events in a small overlay for debugging purposes</string>
+
+    <!-- Status Bar Buttons Configuration -->
+    <string name="status_bar_buttons_title">Status Bar Buttons</string>
+    <string name="status_bar_buttons_description">Customize the buttons shown in the status bar. Each slot can have a different button.</string>
+    <string name="status_bar_slot_left">Left Slot</string>
+    <string name="status_bar_slot_right_1">Right Slot 1</string>
+    <string name="status_bar_slot_right_2">Right Slot 2</string>
+    <string name="status_bar_button_none">None</string>
+    <string name="status_bar_button_none_description">Empty slot</string>
+    <string name="status_bar_button_clipboard">Clipboard</string>
+    <string name="status_bar_button_clipboard_description">Quick access to clipboard history</string>
+    <string name="status_bar_button_microphone">Microphone</string>
+    <string name="status_bar_button_microphone_description">Voice input using speech recognition</string>
+    <string name="status_bar_button_emoji">Emoji</string>
+    <string name="status_bar_button_emoji_description">Open emoji picker</string>
+    <string name="status_bar_button_language">Language</string>
+    <string name="status_bar_button_language_description">Switch keyboard language</string>
+    <string name="status_bar_buttons_reset">Reset to defaults</string>
 </resources>
