--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -472,4 +472,22 @@
     <string name="trackpad_tutorial_complete">Verstanden</string>
     <string name="trackpad_tutorial_next">Weiter</string>
     <string name="trackpad_tutorial_previous">Zurück</string>
+    
+    <!-- Status Bar Buttons Configuration -->
+    <string name="status_bar_buttons_title">Statusleisten-Buttons</string>
+    <string name="status_bar_buttons_description">Statusleisten-Buttons anpassen</string>
+    <string name="status_bar_slot_left">Linker Slot</string>
+    <string name="status_bar_slot_right_1">Rechter Slot 1</string>
+    <string name="status_bar_slot_right_2">Rechter Slot 2</string>
+    <string name="status_bar_button_none">Keiner</string>
+    <string name="status_bar_button_none_description">Leer</string>
+    <string name="status_bar_button_clipboard">Zwischenablage</string>
+    <string name="status_bar_button_clipboard_description">Zwischenablage-Verlauf</string>
+    <string name="status_bar_button_microphone">Mikrofon</string>
+    <string name="status_bar_button_microphone_description">Spracheingabe</string>
+    <string name="status_bar_button_emoji">Emoji</string>
+    <string name="status_bar_button_emoji_description">Emoji-Auswahl</string>
+    <string name="status_bar_button_language">Sprache</string>
+    <string name="status_bar_button_language_description">Sprache wechseln</string>
+    <string name="status_bar_buttons_reset">Zurücksetzen</string>
 </resources>
