--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -353,5 +353,23 @@
     <string name="trackpad_tutorial_complete">Понятно</string>
     <string name="trackpad_tutorial_next">Далее</string>
     <string name="trackpad_tutorial_previous">Назад</string>
+    
+    <!-- Status Bar Buttons Configuration -->
+    <string name="status_bar_buttons_title">Кнопки Панели</string>
+    <string name="status_bar_buttons_description">Настроить кнопки</string>
+    <string name="status_bar_slot_left">Слот Левый</string>
+    <string name="status_bar_slot_right_1">Слот Правый 1</string>
+    <string name="status_bar_slot_right_2">Слот Правый 2</string>
+    <string name="status_bar_button_none">Нет</string>
+    <string name="status_bar_button_none_description">Пусто</string>
+    <string name="status_bar_button_clipboard">Буфер</string>
+    <string name="status_bar_button_clipboard_description">История</string>
+    <string name="status_bar_button_microphone">Микрофон</string>
+    <string name="status_bar_button_microphone_description">Голос</string>
+    <string name="status_bar_button_emoji">Эмодзи</string>
+    <string name="status_bar_button_emoji_description">Выбор</string>
+    <string name="status_bar_button_language">Язык</string>
+    <string name="status_bar_button_language_description">Изменить</string>
+    <string name="status_bar_buttons_reset">Сброс</string>
 </resources>
 
