--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -488,5 +488,9 @@
     <string name="status_bar_button_emoji_description">Wybór</string>
     <string name="status_bar_button_language">Język</string>
     <string name="status_bar_button_language_description">Zmień</string>
+    <string name="status_bar_button_settings">Ustawienia</string>
+    <string name="status_bar_button_settings_description">Otwórz ustawienia</string>
+    <string name="status_bar_button_symbols">Symbole</string>
+    <string name="status_bar_button_symbols_description">Klawiatura symboli</string>
     <string name="status_bar_buttons_reset">Resetuj</string>
 </resources>
