--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -526,6 +526,8 @@
     <string name="status_bar_button_emoji_description">Selettore</string>
     <string name="status_bar_button_language">Lingua</string>
     <string name="status_bar_button_language_description">Cambia</string>
+    <string name="status_bar_button_hamburger">Menu</string>
+    <string name="status_bar_button_hamburger_description">Azioni rapide</string>
     <string name="status_bar_button_settings">Impostazioni</string>
     <string name="status_bar_button_settings_description">Apri impostazioni</string>
     <string name="status_bar_button_symbols">Simboli</string>
