--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -578,6 +578,8 @@
     <string name="status_bar_button_emoji_description">Emoji picker</string>
     <string name="status_bar_button_language">Language</string>
     <string name="status_bar_button_language_description">Switch language</string>
+    <string name="status_bar_button_hamburger">Menu</string>
+    <string name="status_bar_button_hamburger_description">Quick actions</string>
     <string name="status_bar_button_settings">Settings</string>
     <string name="status_bar_button_settings_description">Open settings</string>
     <string name="status_bar_button_symbols">Symbols</string>
